# coiot-switch

./: .gitignore  NOTICE  README.md  main.c  meson.build
subprojects/: sdk
